Add JavaFX Application module for TestFX